app/assets/stylesheets/map/overlays.css.scss
@import "compass/css3/box-shadow";
@import "compass/css3/border-radius";
@import "compass/css3/inline-block";
@import "compass/css3/images";
@import "compass/css3/opacity";
@import "compass/css3/transform";
@import "../common/fonts";
@import "../common/vars";
@import "../common/mixins";
@import "../map/map-sprite";
@import "../elements/elements-sprite";

.overlay.text.droid .content > .text {
  font-family: 'Droid Sans', serif;
  font-weight: 400;
  strong { 
    font-family: 'Droid Sans', serif;
    font-weight: 700;
  }
}

.overlay.text.roboto .content > .text {
  font-family: 'Roboto Slab', serif;
  font-weight: 400;
}

.overlay.text.vollkorn .content > .text {
  font-family: 'Vollkorn', serif!important;
  font-weight: 400;
}

.overlay.text.open_sans .content > .text {
  font-family: 'Open Sans', sans-serif;
  strong { font-family: 'Open Sans Bold', sans-serif; }
}

.cartodb-logo {
  display:none;
  position:absolute;
  bottom: 0;
  left: 0;
  z-index: 100000;
}

.header.overlay-static {
  display: none;
  width: 100%;
  @include border-radius(0);
  max-width: inherit;

  .content:hover { cursor: default; }
  &:hover { background:rgba(#333, .5); }

  @include simple-transition(all, .10s, ease-in-out);

  position: absolute;
  background:rgba(#333, .5);

  @include simple-transition(background, .10s, ease-in-out);

  .content { padding: 10px; }

  .title, .description {
    display:none;
  }

  .title {
    font-weight: bold;
    font-size:15px;
    color: #fff;
  }

  .description {
    color: #fff;
    font-size:13px;

    a {
      color: inherit;
      text-decoration: underline;
      &:hover { color: #ccc; }
    }

    strong { font-weight: bold;  }
    em     { font-style: italic; }

  }

  z-index:0;

}

.overlay {

  display: none;
  position: absolute;

  background:rgba(#333, .5);

  @include border-radius(3px);
  @include simple-transition(background, .10s, ease-in-out);

  max-width: 800px;

  z-index: 999;

  &:hover { 
    background:rgba(#333, .7);
  }

  .hint {
    display:none;

    margin: 2px 1px 0 0;
    padding: 0 0 0 20px;
    font-size: 11px;
    text-align: right;
    color: #fff;
    @include opacity(.7);

    strong, em, span { 
      @include inline-block();
      margin-left: 3px;
    }

  }

  /* Image Overlay */
  &.image {

    .loader{
      display:none;
      background: rgba(#333, .5) image-url('layout/loader_transparent.gif') no-repeat 50% 50%;
      @include absolute-center(38px, 16px);
    }

    .content {
      position:relative;
      @include border-radius(3px);
    }

    &.error .loader {
      display:none;
    }

    &.error .content .text {
      position: relative;
      width: 200px!Important;
      height: 200px!Important;
      background: rgba(#333, .5) image-url('layout/image_not_found.png') no-repeat 50% 50%;
    }

    &.error .content {
      img { display: none!important; }
    }

    &.editable {

      width: 400px;
      max-width: 400px;
      min-width: 100px;

      .content div {
        background: #333;
        @include opacity(.8);
      }

      .text { font-weight:normal; }
    }

    img {

      -moz-user-select: none; /* These user-select properties are inheritable, used to prevent text selection */
      -webkit-user-select: none;
      -ms-user-select: none; /* From IE10 only */
      user-select: none; /* Not valid CSS yet, as of July 2012 */

      -webkit-user-drag: none; /* Prevents dragging of images/divs etc */
      user-drag: none;
    }

  }

  &.open {

    .edit {
      background: #fff;
      color: #333;

      @include opacity(1);

      &:after {
        border-top: 4px solid #373F46;
      }

    } // .edit

    .close {
      @include opacity(1);
    }


  } // .open

  &.editable {

    .hint { display: block; }

    .text {

      @include user-select(inherit);

      padding: 5px 9px;

      .content {
        padding: 10px 10px 3px 10px;
      }

      border: 1px dashed #ccc;
      cursor: text!important;

      @include simple-transition(padding, 100ms, ease-in);

    }

  }

  &.draggable {

    cursor: move!important;

    .edit, .close { @include opacity(0); }
    .text { cursor: move!important; }

  }

  &:hover .edit,
  &:hover .close,
  &:hover div.dropdown.properties_dropdown { 
    @include opacity(1);
  }

  div.dropdown.properties_dropdown { 
    @include opacity(0);
    @include simple-transition(opacity, .10s, ease-in-out);

    ul li > span:first-child { width: 63px; }
    ul li .select2-container .select2-choice { overflow: visible; width: 100px;  }
    ul li .select2-container.font-family { width: 90px; }

    input.value {
      top: -2px;
      position: relative;
    }

  }

  .close, .edit {

    cursor: pointer;

    position: absolute;
    color: #fff;
    border: 1px solid #fff;
    background: #333;
    font-size: 10px;
    font-family: "helvetica neue", "helvetica", arial;
    text-align: center;
    text-transform: uppercase;

    @include opacity(0);
    @include simple-transition(opacity, .10s, ease-in-out);

  }

  .close {
    top: -12px;
    left: -15px;
    height: 16px;
    width: 17px;
    padding: 3px;
    line-height: 16px;

    @include border-radius(90px);

    &:hover { text-decoration:none; }

  }

  /* edit button */

  .edit {
    top: -12px;
    right: -15px;
    padding: 5px 18px 5px 11px;
    letter-spacing: 1px;
    font-weight: 500;
    @include border-radius(20px);

    &:after { /* triangle icon */
      content: '';
      position:absolute;
      top: 10px;
      right: 8px;
      width: 0; 
      height: 0; 
      border-left: 3px solid transparent;
      border-right: 3px solid transparent;
      border-top: 4px solid #fff;
    }
  }

} // .overlay
/* ... */

